# Test configuration
# This file will be expanded when tests are added

# Example test structure:
# enable_testing()
# 
# add_executable(test_hand_eye_calib test_hand_eye_calib.cpp)
# target_link_libraries(test_hand_eye_calib hand_eye_calib)
# add_test(NAME HandEyeCalibTest COMMAND test_hand_eye_calib) 